--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,13 @@ streamlit>=1.29.0
 transformers>=4.35.0
 torch>=2.0.0
 
+# NLP - NER
+spacy>=3.7.0,<3.8.0
+scispacy>=0.5.4
+
 # Visualization
 plotly>=5.18.0
+
+# Note: ScispaCy models must be installed separately:
+# pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_scibert-0.5.4.tar.gz
+# pip install https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_ner_bc5cdr_md-0.5.4.tar.gz
